change example to test read() against undefined

--- a/examples/sensorAndSlider/interface/index.html
+++ b/examples/sensorAndSlider/interface/index.html
@@ -65,7 +65,7 @@
 
     obj.object.on("object", function (msg) {
         var data = JSON.parse(msg)
-        if (obj.read("led", data)) {
+        if (obj.read("led", data) != undefined) {
             slider.value = obj.read("led", data) * 255;
         }
     });
