updated the example

--- a/examples/readWrite/interface/index.html
+++ b/examples/readWrite/interface/index.html
@@ -6,9 +6,7 @@
     <script src="object.js"></script>
 </head>
 <body>
-<!--<img src="bird.png" width="300" height="300" alt=""/>-->
-<a href="http://www.mit.edu"><img src="bird.png" width="300" height="300" alt=""/></a>
-Hello Suranga
+<img src="bird.png" width="300" height="300" alt=""/>
 </body>
 </html>
 
